# shadow-auditor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-GITLEAKS  LICENSE-MIT  README.md  shaudit-plan.md
.github/workflows/: ci.yml
crates/shaudit-cli/: Cargo.toml
crates/shaudit-cli/src/: main.rs
crates/shaudit-cli/tests/: detection.rs  scan_basic.rs  secrets.rs
crates/shaudit-config/: Cargo.toml
crates/shaudit-config/src/: lib.rs
crates/shaudit-core/: Cargo.toml
crates/shaudit-core/src/: lib.rs
crates/shaudit-detect/: Cargo.toml
crates/shaudit-detect/src/: git.rs  lib.rs  scorer.rs
crates/shaudit-detect/src/signals/: commit_msg.rs  commit_size.rs  docstring_ratio.rs  function_variance.rs  marketing_comments.rs  mod.rs  null_density.rs  time_of_day.rs  unused_imports.rs
crates/shaudit-discover/: Cargo.toml
crates/shaudit-discover/src/: diff.rs  fs.rs  lib.rs
crates/shaudit-output/: Cargo.toml
crates/shaudit-output/src/: json.rs  lib.rs  sarif.rs  terminal.rs
crates/shaudit-parse/: Cargo.toml
crates/shaudit-parse/src/: cache.rs  lib.rs
crates/verify-cve/: Cargo.toml
crates/verify-cve/src/: cache.rs  lib.rs  osv.rs  rust.rs
crates/verify-cve/src/lockfiles/: go.rs  mod.rs  node.rs  python.rs
crates/verify-secrets/: Cargo.toml
crates/verify-secrets/src/: allowlist.rs  context.rs  entropy.rs  lib.rs  rules.rs
data/: ai-signatures.toml  secrets-rules.toml
tests/fixtures/ai-authored/: ai_marker.rs  human_marker.rs
tests/fixtures/with-secrets/: aws_key.rs  commented_out.rs  github_pat.ts  high_entropy.rs  private_key.py
