[package]
name = "shaudit-output"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shadow Auditor — terminal / JSON / SARIF renderers"

[dependencies]
shaudit-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
owo-colors = { workspace = true }
